# mvar

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_LINEAGE.md  DISCLAIMERS.md  INSTALL.md  LICENSE.md  NOTICE.md  PLANNING_IMPLEMENTATION_PHASES.md  PLANNING_PROTECT_WRAPPER.md  PLANNING_SPEC_SCHEMAS.md  README.md  RUN_THE_PROOF.md  SECURITY.md  STATUS.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  TRUST.md  demo.tape  mvar_core  osv-scanner.toml  pyproject.toml  pytest.ini  quickstart.py  requirements-ci-py310.txt  requirements-ci.in  requirements-ci.txt  requirements.txt  run_proof_pack.sh  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.well-known/: security.txt
adapters/: mission_control_adapter.py
conformance/: README.md  adapter_contract.py  community_attack_harness.py  community_attack_vector_schema.json  openclaw_contract.py  pytest_adapter_harness.py  pytest_openclaw_harness.py
demo/: __init__.py  comparison_demo.py  comprehensive_attack_suite.py  extreme_attack_suite_50.py  info.py  live_exploit_attempts.py  openclaw_cve_defense.py  openclaw_runtime_integration_demo.py
docs/: ADAPTER_SPEC.md  AGENT_INTEGRATION_PLAYBOOK.md  AGENT_TESTBED.md  ATTACK_VALIDATION_SHOWCASE.md  ATTACK_VECTOR_SUBMISSIONS.md  BUILD_WITH_US.md  CCL_GOLDEN_EXAMPLES.md  DEV_INSTALL.md  FIRST_PARTY_ADAPTERS.md  GAP_CLOSURE_TRACKER.md  INCIDENT_CLASS_PUBLIC_BIND_MAR2_2026.md  MVAR_AGENT_TESTBED_TRILOGY.md  OBSERVABILITY.md  PERFORMANCE_AND_THREAT_MODEL.md  PHASE2_INTEGRATION_DEPLOYMENT_PLAN.md  (+12 more)
(+200 files in other folders)
